--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;700&display=swap');
+
+* {
+	font-family: 'Poppins', sans-serif;
+	font-weight: 200;
+	font-size: 18px;
+}
